--- a/index.html
+++ b/index.html
@@ -6,40 +6,36 @@
     <title>Semantic HTML</title>
   </head>
   <body>
-    <div>
-      <div id="header">
-        <h1>Semantic HTML Refactor</h1>
+    <div id="header">
+      <h1>Semantic HTML Refactor</h1>
+    </div>
+    <div id="content">
+      <h2>Semantic HTML Resources</h2>
+      <div class="resource">
+        <h3>
+          <a href="https://www.w3schools.com/tags/tag_article.asp">
+            HTML Semantic Elements
+          </a>
+        </h3>
+        <p>Examples of semantic elements: form, table, and article...</p>
       </div>
-      <div id="content">
-        <h2>Semantic HTML Resources</h2>
-        <div class="resource">
-          <h3>
-            <a href="https://www.w3schools.com/tags/tag_article.asp">
-              HTML Semantic Elements
-            </a>
-          </h3>
-          <p>Examples of semantic elements: form, table, and article...</p>
-        </div>
-        <div class="resource">
-          <h3>
-            <a
-              href="https://www.freecodecamp.org/news/semantic-html5-elements/"
-            >
-              Semantic HTML5 Elements Explained
-            </a>
-          </h3>
-          <p>
-            Semantic HTML elements are those that clearly describe their meaning
-            in a human- and machine-readable way...
-          </p>
-        </div>
-      </div>
-      <div id="footer">
-        <p>Author: Student Name</p>
+      <div class="resource">
+        <h3>
+          <a href="https://www.freecodecamp.org/news/semantic-html5-elements/">
+            Semantic HTML5 Elements Explained
+          </a>
+        </h3>
         <p>
-          <a href="mailto:student@masterschool.com">student@masterschool.com</a>
+          Semantic HTML elements are those that clearly describe their meaning
+          in a human- and machine-readable way...
         </p>
       </div>
+    </div>
+    <div id="footer">
+      <p>Author: Student Name</p>
+      <p>
+        <a href="mailto:student@masterschool.com">student@masterschool.com</a>
+      </p>
     </div>
   </body>
 </html>
