--- a/index.html
+++ b/index.html
@@ -1,41 +1,76 @@
 <!-- Refactor the code below from div soup to semantic HTML -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Semantic HTML</title>
-  </head>
-  <body>
-    <div id="header">
-      <h1>Semantic HTML Refactor</h1>
-    </div>
-    <div id="content">
-      <h2>Semantic HTML Resources</h2>
-      <div class="resource">
-        <h3>
-          <a href="https://www.w3schools.com/tags/tag_article.asp">
-            HTML Semantic Elements
-          </a>
-        </h3>
-        <p>Examples of semantic elements: form, table, and article...</p>
-      </div>
-      <div class="resource">
-        <h3>
-          <a href="https://www.freecodecamp.org/news/semantic-html5-elements/">
-            Semantic HTML5 Elements Explained
-          </a>
-        </h3>
-        <p>
-          Semantic HTML elements are those that clearly describe their meaning
-          in a human- and machine-readable way...
-        </p>
-      </div>
-    </div>
-    <div id="footer">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Semantic HTML</title>
+</head>
+
+<body>
+  <header>
+    <h1>Semantic HTML Refactor</h1>
+  </header>
+  <main>
+    <h2>Semantic HTML Resources</h2>
+    <article>
+      <h3>
+        <a href="https://www.w3schools.com/tags/tag_article.asp">
+          HTML Semantic Elements
+        </a>
+      </h3>
+      <p>Examples of semantic elements: form, table, and article...</p>
+      <h3>
+        <a href="https://www.freecodecamp.org/news/semantic-html5-elements/">
+          Semantic HTML5 Elements Explained
+        </a>
+      </h3>
+      <p>
+        Semantic HTML elements are those that clearly describe their meaning
+        in a human- and machine-readable way...
+      </p>
+    </article>
+    <footer>
       <p>Author: Student Name</p>
       <p>
         <a href="mailto:student@masterschool.com">student@masterschool.com</a>
       </p>
+    </footer>
+
+  </main>
+
+
+  <!-- <div id="header">
+      <h1>Semantic HTML Refactor</h1>
+    </div> -->
+  <!-- <div id="content">
+    <h2>Semantic HTML Resources</h2>
+    <div class="resource">
+      <h3>
+        <a href="https://www.w3schools.com/tags/tag_article.asp">
+          HTML Semantic Elements
+        </a>
+      </h3> -->
+  <!-- <p>Examples of semantic elements: form, table, and article...</p>
     </div>
-  </body>
+    <div class="resource">
+      <h3>
+        <a href="https://www.freecodecamp.org/news/semantic-html5-elements/">
+          Semantic HTML5 Elements Explained
+        </a>
+      </h3>
+      <p>
+        Semantic HTML elements are those that clearly describe their meaning
+        in a human- and machine-readable way...
+      </p>
+    </div>
+  </div>
+  <div id="footer">
+    <p>Author: Student Name</p>
+    <p>
+      <a href="mailto:student@masterschool.com">student@masterschool.com</a>
+    </p>
+  </div> -->
+</body>
+
 </html>
